--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,10 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false
+    "noFallthroughCasesInSwitch": false,
+    // 配置别名
+    "paths": {
+      "@/*": ["src/*"],
+    }
   }
 }
